<resources>
    <string name="app_name">kep</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="Usuario">Usuario</string>
    <string name="Contraseña">Contraseña</string>
    <string name="Correo">Correo</string>
    <string name="Olvide">Olvide Contraeña</string>
    <string name="Recuper">Recuperar Contraseña</string>
    <string name="envia">Enviar correo</string>
    <string name="nodoCarrera">Carreras</string>
    <string name="nodoPersona">Personas</string>


    //STRING AYLIN
    <string name="inicia_sesion">Inicia Sesión</string>
    <string name="unete_a_nosotros">Únete a nosotros</string>
    <string name="registra_pregunta">Registra Pregunta</string>
    <string name="registra_carrera">Registra Carrera</string>
    <string name="freak_developer">FREAK.DEVELOPER</string>
    <string name="nick_name">NickName</string>
    <string name="correo_electronico">Correo Electronico</string>
    <string name="contraseña">Contraseña</string>
    <string name="confirma_contraseña">Confirma contraseña</string>
    <string name="iniciar">Iniciar</string>
    <string name="olvido_contraseña">¿Olvidaste tu contraseña?</string>
    <string name="msj_recupera_contra">Introduce tu correo electronico para recuperar tu contraseña</string>
    <string name="enviar">Enviar</string>
    <string name="fisica">FISICA</string>
    <string name="razonamiento_matematico">RAZONAMIENTO MATEMATICO</string>
    <string name="algebra">ALGEBRA</string>
    <string name="geometria_y_trigonometria">GEOMETRIA Y TRIGONOMETRIA</string>
    <string name="geometria_analitica">GEOMETRIA ANALITICA</string>
    <string name="calculo_diferencial_e_integral">CALCULO DIFERENCIAL E INTEGRAL</string>
    <string name="probabilidad_y_estadistica">PROBABILIDAD Y ESTADISTICA</string>
    <string name="produccion_escrita">PRODUCCION ESCRITA</string>
    <string name="comprension_de_textos">COMPRENSION DE TEXTOS</string>
    <string name="biologia">BIOLOGIA</string>
    <string name="quimica">QUIMICA</string>
    <string name="infinity">INFINITY</string>
    <string name="abandonar_partida">Abandonar Partida</string>
    <string name="Graf">ACIERTOS POR MATERIA</string>
    <string name="GrafE">ERRORES POR MATERIA</string>
    <string name="a_j_u_s_t_e_s">A J U S T E S</string>
    <string name="hola" />
    <string name="nickname_actual">NickName Actual:</string>
    <string name="correo">Correo:</string>
    <string name="contrase_a_actual">Contraseña Actual:</string>
    <string name="confirma_contrase_a">Confirma Contraseña:</string>
    <string name="escuela_actual">Escuela Actual:</string>
    <string name="escuela_a_ingresar_actual">Escuela a Ingresar Actual:</string>
    <string name="guardar_cambios">Guardar Cambios</string>
    <string name="preguntas_frecuentes">Preguntas Frecuentes</string>
    <string name="enviar_mensaje">ENVIAR MENSAJE</string>
</resources>