<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.AjustesActivity"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Tit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/a_j_u_s_t_e_s"
                android:textAlignment="center"
                android:textSize="36sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hola"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/NickNA"
                android:text="@string/nickname_actual"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/NickNN"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/MailA"
                android:text="@string/correo"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ContraA"
                android:text="@string/contrase_a_actual"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ContraN"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ConConfir"
                android:text="@string/confirma_contrase_a"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Confir"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/EscuA"
                android:text="@string/escuela_actual"/>
            <Spinner
                android:id="@+id/EActual"
                style="@style/spinner"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/EscuIngA"
                android:text="@string/escuela_a_ingresar_actual"/>

            <Spinner
                android:id="@+id/EIngresar"
                style="@style/spinner"
                />

            <Button
                android:id="@+id/btnCambiar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60sp"
                android:layout_marginTop="30sp"
                android:layout_marginRight="60sp"
                android:layout_marginBottom="60sp"
                android:text="@string/guardar_cambios"
                android:textAlignment="center"
                android:textSize="14sp" />



        </LinearLayout>

    </ScrollView>
</LinearLayout>