<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.PreguntasPorMateriaFragment"
    android:background="@color/grisClaro"
    >

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:columnCount="2"
        android:rowCount="6"
        android:alignmentMode="alignMargins"
        android:columnOrderPreserved="false"
        android:layout_margin="16dp">

        <LinearLayout
            android:id="@+id/infinito"
            android:tag="todas"
            android:background="@color/color1"
            style="@style/tarjetasLayoutMaterias"
            >
            <ImageView
                android:id="@+id/imgInfinito"
                style="@style/tarjetasImgMaterias"
                android:background="@drawable/infii" />
            <TextView
                android:text="@string/infinity"
                style="@style/tarjetasTextViewMaterias"
                android:textSize="20sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/fisica"
            android:tag="Fisica"
            android:background="@color/color2"
            style="@style/tarjetasLayoutMaterias"
            >
            <ImageView
                android:id="@+id/imgFisica"
                style="@style/tarjetasImgMaterias"
                android:background="@drawable/icon_fisica"
                />
            <TextView
                android:text="@string/fisica"
                style="@style/tarjetasTextViewMaterias"
                android:textSize="20sp"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/algebra"
            android:tag="Algebra"
            android:background="@color/color3"
            style="@style/tarjetasLayoutMaterias"
            >
            <ImageView
                android:id="@+id/imgAlgebra"
                style="@style/tarjetasImgMaterias"
                android:background="@drawable/xw"/>
            <TextView
                android:text="@string/algebra"
                style="@style/tarjetasTextViewMaterias"
                android:textSize="20sp"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/razMatematico"
            android:tag="Razonamiento Matematico"
            android:background="@color/color4"
            style="@style/tarjetasLayoutMaterias"
            >
            <ImageView
                android:id="@+id/imgRazMatematico"
                style="@style/tarjetasImgMaterias"
                android:background="@drawable/icon_razmat"/>
            <TextView
                android:text="@string/razonamiento_matematico"
                style="@style/tarjetasTextViewMaterias"
                android:textSize="13sp"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/geoTrigo"
            android:tag="Geometria y Trigonometria"
            android:background="@color/color5"
            style="@style/tarjetasLayoutMaterias"
            >
            <ImageView
                android:id="@+id/imgGeoTrigo"
                style="@style/tarjetasImgMaterias"
                android:background="@drawable/geo"/>
            <TextView
                android:text="@string/geometria_y_trigonometria"
                style="@style/tarjetasTextViewMaterias"
                android:textSize="13sp"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/geoAnalitica"
            android:tag="Geometria Analitica"
            android:background="@color/color6"
            style="@style/tarjetasLayoutMaterias"
            >
            <ImageView
                android:id="@+id/imgGeoAnalitica"
                style="@style/tarjetasImgMaterias"
                android:background="@drawable/ana"/>
            <TextView
                android:text="@string/geometria_analitica"
                style="@style/tarjetasTextViewMaterias"
                android:textSize="13sp"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/calDifIntegral"
            android:tag="Calculo Diferencial e Integral"
            android:background="@color/color7"
            style="@style/tarjetasLayoutMaterias"
            >
            <ImageView
                android:id="@+id/imgCalDifIntegral"
                style="@style/tarjetasImgMaterias"
                android:background="@drawable/rr"
                />
            <TextView
                android:text="@string/calculo_diferencial_e_integral"
                style="@style/tarjetasTextViewMaterias"
                android:textSize="12sp"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/probaEstadistica"
            android:tag="Probabilidad y Estadistica"
            android:background="@color/color8"
            style="@style/tarjetasLayoutMaterias"
            >
            <ImageView
                android:id="@+id/imgProbaEstadistica"
                style="@style/tarjetasImgMaterias"
                android:background="@drawable/esta"/>
            <TextView
                android:text="@string/probabilidad_y_estadistica"
                style="@style/tarjetasTextViewMaterias"
                android:textSize="13sp"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/prodEscrita"
            android:tag="Produccion Escrita"
            android:background="@color/color9"
            style="@style/tarjetasLayoutMaterias"
            >
            <ImageView
                android:id="@+id/imgProdEscrita"
                style="@style/tarjetasImgMaterias"
                android:background="@drawable/we"/>
            <TextView
                android:text="@string/produccion_escrita"
                style="@style/tarjetasTextViewMaterias"
                android:textSize="13sp"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/compreTextos"
            android:tag="Comprension de Textos"
            android:background="@color/color10"
            style="@style/tarjetasLayoutMaterias"
            >
            <ImageView
                android:id="@+id/imgCompreTextos"
                style="@style/tarjetasImgMaterias"
                android:background="@drawable/wr"/>
            <TextView
                android:text="@string/comprension_de_textos"
                style="@style/tarjetasTextViewMaterias"
                android:textSize="13sp"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/biologia"
            android:tag="Biologia"
            android:background="@color/color11"
            android:layout_marginBottom="30dp"
            style="@style/tarjetasLayoutMaterias"
            >
            <ImageView
                android:id="@+id/imgBiologia"
                style="@style/tarjetasImgMaterias"
                android:background="@drawable/bi"/>
            <TextView
                android:text="@string/biologia"
                style="@style/tarjetasTextViewMaterias"
                android:textSize="20sp"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/quimica"
            android:tag="Quimica"
            android:background="@color/color12"
            android:layout_marginBottom="30dp"
            style="@style/tarjetasLayoutMaterias"
            >
            <ImageView
                android:id="@+id/imgQuimica"
                style="@style/tarjetasImgMaterias"
                android:background="@drawable/qq"/>
            <TextView
                android:text="@string/quimica"
                style="@style/tarjetasTextViewMaterias"
                android:textSize="20sp"
                />
        </LinearLayout>

    </GridLayout>

</ScrollView>