<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.RecuperarContraActivity"
    android:background="@drawable/fondo2">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/negro"
        android:alpha="0.6"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="40dp"
        android:gravity="center"
        >

        <ImageView
            android:layout_width="100dp" android:contentDescription="TODO"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:background="@drawable/kep_icon_blanco"
            android:layout_marginBottom="40dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/msj_recupera_contra"
            android:textColor="@color/blanco"
            android:textSize="20sp"
            android:textAlignment="center"
            android:layout_marginBottom="40dp"
            />

        <EditText
            android:id="@+id/Correo"
            android:hint="@string/correo_electronico"
            android:inputType="textWebEmailAddress"
            style="@style/AppTheme.txtFondoOscuro"
            />

        <Button
            android:id="@+id/Recup"
            android:text="@string/enviar"
            style="@style/AppTheme.boton"
            android:layout_marginTop="40dp"
            />

    </LinearLayout>

</RelativeLayout>