<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.PrincipalActivity"
    android:background="@drawable/fondo2"
    >

    <RelativeLayout
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@color/colorPrimaryDark"
        android:onClick="visualiza"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="40dp"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="80dp" android:contentDescription="TODO"
                android:layout_height="90dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/graf_inicio_izquierda"/>
            <ImageView
                android:layout_width="110dp" android:contentDescription="TODO"
                android:layout_height="180dp"
                android:background="@drawable/logo_ipn_blanco"/>
            <ImageView
                android:layout_width="80dp" android:contentDescription="TODO"
                android:layout_height="90dp"
                android:layout_marginLeft="5dp"
                android:background="@drawable/graf_inicio_derecha"/>
        </LinearLayout>

        <Button
            style="@style/AppTheme.boton"
            android:text="@string/inicia_sesion"
            android:onClick="irAInicioSesion"
            android:layout_marginTop="90dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unete_a_nosotros"
            android:onClick="irARegistro"
            android:textColor="@color/blanco"
            android:layout_gravity="center"
            android:textSize="17sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            />

        <Button
            style="@style/AppTheme.boton"
            android:text="FAQ's"
            android:onClick="irAFAQS"
            />

        <Button
            android:id="@+id/btnFaq"
            style="@style/AppTheme.boton"
            android:text="REGISTRA FAQ"
            android:onClick="irARegistraFAQS"
            android:visibility="gone"
            />

        <Button
            android:id="@+id/regPregunta"
            style="@style/AppTheme.boton"
            android:text="@string/registra_pregunta"
            android:onClick="irARegPregunta"
            android:visibility="gone"
            />

        <Button
            android:id="@+id/regCarrera"
            style="@style/AppTheme.boton"
            android:text="@string/registra_carrera"
            android:onClick="irARegCarrera"
            android:visibility="gone"
            />

        <Button
            android:id="@+id/RegEnci"
            style="@style/AppTheme.boton"
            android:text="REGISTRA Enciclopedia"
            android:onClick="irAEnciclopedia"
            android:visibility="gone"
            />

    </LinearLayout>

</RelativeLayout>